--- a/chain-replication/Procfile
+++ b/chain-replication/Procfile
@@ -2,8 +2,7 @@
 #raftexample1: raftexample --id 1 --cluster http://127.0.0.1:12379,http://127.0.0.1:22379,http://127.0.0.1:32379 --port 12380
 #raftexample2: raftexample --id 2 --cluster http://127.0.0.1:12379,http://127.0.0.1:22379,http://127.0.0.1:32379 --port 22380
 #raftexample3: raftexample --id 3 --cluster http://127.0.0.1:12379,http://127.0.0.1:22379,http://127.0.0.1:32379 --port 32380
-rm -r raftexample-*
-#may have to use id [1,2,3] for all clustres
+
 raft1: chain-replication --id 1 --clusterID 0x1001 --cluster http://127.0.0.1:11379,http://127.0.0.1:12379,http://127.0.0.1:13379 --port 11380 --succ http://127.0.0.1:21380,http://127.0.0.1:22380,http://127.0.0.1:23380
 raft2: chain-replication --id 2 --clusterID 0x1001 --cluster http://127.0.0.1:11379,http://127.0.0.1:12379,http://127.0.0.1:13379 --port 12380 --succ http://127.0.0.1:21380,http://127.0.0.1:22380,http://127.0.0.1:23380
 raft3: chain-replication --id 3 --clusterID 0x1001 --cluster http://127.0.0.1:11379,http://127.0.0.1:12379,http://127.0.0.1:13379 --port 13380 --succ http://127.0.0.1:21380,http://127.0.0.1:22380,http://127.0.0.1:23380
@@ -16,6 +15,6 @@ raft7: chain-replication --id 1 --clusterID 0x1003 --cluster http://127.0.0.1:31
 raft8: chain-replication --id 2 --clusterID 0x1003 --cluster http://127.0.0.1:31379,http://127.0.0.1:32379,http://127.0.0.1:33379 --port 32380 --pred ttp://127.0.0.1:21380,http://127.0.0.1:22380,http://127.0.0.1:23380
 raft9: chain-replication --id 3 --clusterID 0x1003 --cluster http://127.0.0.1:31379,http://127.0.0.1:32379,http://127.0.0.1:33379 --port 33380 --pred ttp://127.0.0.1:21380,http:21127.0.0.1:22380,http:2/127.0.0.1:23380
 
-# cu23 -L http://127.0.0.1:32380/my-key
+#curl -L http://127.0.0.1:32380/my-key
 #curl -L http://127.0.0.1:12380/my-key -XPUT -d bar
 #curl -L http://127.0.0.1:12380/my-key/value -XPUT -d http://127.0.0.1:173732
