--- a/chain-replication/Procfile
+++ b/chain-replication/Procfile
@@ -1,7 +1,4 @@
-# Use goreman to run `go get github.com/mattn/goreman`
-#raftexample1: raftexample --id 1 --cluster http://127.0.0.1:12379,http://127.0.0.1:22379,http://127.0.0.1:32379 --port 12380
-#raftexample2: raftexample --id 2 --cluster http://127.0.0.1:12379,http://127.0.0.1:22379,http://127.0.0.1:32379 --port 22380
-#raftexample3: raftexample --id 3 --cluster http://127.0.0.1:12379,http://127.0.0.1:22379,http://127.0.0.1:32379 --port 32380
+# Use spm to run `go get github.com/bytegust/spm`
 
 raft1: chain-replication --id 1 --clusterID 0x1001 --raftCluster http://127.0.0.1:11379,http://127.0.0.1:12379,http://127.0.0.1:13379 --cluster http://127.0.0.1:11380,http://127.0.0.1:12380,http://127.0.0.1:13380 --succ http://127.0.0.1:21380,http://127.0.0.1:22380,http://127.0.0.1:23380
 raft2: chain-replication --id 2 --clusterID 0x1001 --raftCluster http://127.0.0.1:11379,http://127.0.0.1:12379,http://127.0.0.1:13379 --cluster http://127.0.0.1:11380,http://127.0.0.1:12380,http://127.0.0.1:13380 --succ http://127.0.0.1:21380,http://127.0.0.1:22380,http://127.0.0.1:23380
@@ -14,7 +11,3 @@ raft6: chain-replication --id 3 --clusterID 0x1002 --raftCluster http://127.0.0.
 raft7: chain-replication --id 1 --clusterID 0x1003 --raftCluster http://127.0.0.1:31379,http://127.0.0.1:32379,http://127.0.0.1:33379 --cluster http://127.0.0.1:31380,http://127.0.0.1:32380,http://127.0.0.1:33380 --pred ttp://127.0.0.1:21380,http://127.0.0.1:22380,http://127.0.0.1:23380
 raft8: chain-replication --id 2 --clusterID 0x1003 --raftCluster http://127.0.0.1:31379,http://127.0.0.1:32379,http://127.0.0.1:33379 --cluster http://127.0.0.1:31380,http://127.0.0.1:32380,http://127.0.0.1:33380 --pred ttp://127.0.0.1:21380,http://127.0.0.1:22380,http://127.0.0.1:23380
 raft9: chain-replication --id 3 --clusterID 0x1003 --raftCluster http://127.0.0.1:31379,http://127.0.0.1:32379,http://127.0.0.1:33379 --cluster http://127.0.0.1:31380,http://127.0.0.1:32380,http://127.0.0.1:33380 --pred ttp://127.0.0.1:21380,http:21127.0.0.1:22380,http:2/127.0.0.1:23380
-
-#curl -L http://127.0.0.1:32380/my-key
-#curl -L http://127.0.0.1:12380/my-key -XPUT -d bar
-#curl -L http://127.0.0.1:12380/my-key/value -XPUT -d http://127.0.0.1:173732
